--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-epson-epos-sdk",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "main": "dist/index.cjs.js",
   "module": "dist/index.esm.js",
   "types": "dist/index.d.ts",
@@ -10,7 +10,22 @@
   "scripts": {
     "build": "rollup -c"
   },
-  "keywords": [],
+  "keywords": [
+    "react",
+    "epson",
+    "epos",
+    "printer",
+    "printing",
+    "thermal-printer",
+    "receipt-printer",
+    "pos",
+    "point-of-sale",
+    "sdk",
+    "react-library",
+    "thermal-printing",
+    "printer-sdk",
+    "epson-printer"
+  ],
   "author": "",
   "license": "MIT",
   "description": "",
