--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-epson-epos-sdk",
-  "version": "0.1.4",
+  "version": "0.1.5",
   "main": "dist/index.cjs.js",
   "module": "dist/index.esm.js",
   "types": "dist/index.d.ts",
@@ -28,7 +28,7 @@
   ],
   "author": "",
   "license": "MIT",
-  "description": "",
+  "description": "React library for managing Epson printers with ePOS SDK support.",
   "peerDependencies": {
     "react": "^17.0.0 || ^18.0.0 || ^19.0.0",
     "react-dom": "^17.0.0 || ^18.0.0 || ^19.0.0"
